DNN-9120 - Fixed alignment of icons, popups in users.

--- a/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/DetailRow/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/DetailRow/style.less
@@ -57,7 +57,7 @@
         //width: 20px;
         //height: 20px;
         margin-left: 5px;
-        float: none;
+        float: right;
         cursor: pointer;
         svg {
             width: 20px;
