--- a/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UserMenu/menu/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UserMenu/menu/style.less
@@ -11,7 +11,7 @@
     }
     &.menu {
         position: absolute;
-        right: -76px;
+        right: -18px;
         top: 35px;
         text-align: left;
         z-index: 1000;
