--- a/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UserMenu/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/UserMenu/style.less
@@ -6,7 +6,7 @@
         }
         .dnn-user-change-password {
             width: 400px;
-            right: -76px;
+            right: -18px;
             top: 35px;
             left: auto;
         }
